# probabilidad_y_estadistica

./: .pre-commit-config.yaml  README.md  pyproject.toml
practica_1/: README.md  pyproject.toml
practica_1/1_preliminares/: ejercicio_1.md  ejercicio_2.md  ejercicio_3.md  ejercicio_4.md  ejercicio_5.md  ejercicio_6.md
practica_1/2_equiprobabilidad/: ejercicio_1.md  ejercicio_2.md  ejercicio_3.md  ejercicio_4.md  ejercicio_5.md  ejercicio_6.md  ejercicio_7.md  ejercicio_8.md
practica_1/practica_1/: practica1.ipynb
